--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,9 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    
 }
 html{
     scroll-behavior: smooth;
-
 }
 body{
     font-family: "Open Sans","Arial", sans-serif;
@@ -18,7 +16,6 @@ body{
     line-height: 24px;
     color:#444;
     background-color: #fff;
-
 }
 .container{
     width: 100%;
@@ -27,7 +24,6 @@ body{
     padding-right: 20px;
     margin-right: auto;
     margin-left: auto;
-
 }
 /* SITE BUTTON STYLES */
 .red-btn{
@@ -43,7 +39,6 @@ body{
     text-transform: uppercase;
     text-decoration: none;
     display: inline-block;
-
 }
 
 /* SITE HEADER STYLS */
@@ -63,22 +58,17 @@ padding: 24px 0;
     line-height: 32.6px;
     text-decoration: none;
     color: #222;
-
-
-
 }
 .site-logo:hover{
     color: #de2e54;
 }
 .site-logo:active{
     opacity: 0.6;
-    
 }
 .site-logo-img{
     margin-right: 16px;
     width: 50px;
     height: 50px;
-
 }
 .sitenav-list{
     display: flex;
@@ -86,8 +76,6 @@ padding: 24px 0;
 }
 .sitenav-item:not(:last-child){
     margin-right: 32px;
-
-
 }
 .sitenav-link{
     font-weight: 700;
@@ -98,50 +86,39 @@ padding: 24px 0;
     color: #222;
 }
 .sitenav-link:hover{
-    color: #de2e54;
-
-
+    color: #de2e54
 }
 .sitenav-link:active{
     opacity: 0.6;
-
 }
 .site-header-btn{
     border: solid 2px #de2e54;
-
 }
 .site-header-btn:hover{
     color: #de2e54;
     background-color: #fff;
-    
-
 }
 .site-header-btn:active{
-   opacity: 0.6;
-   background-color: #de2e54;
-   color: #fff;
-
+    opacity: 0.6;
+    background-color: #de2e54;
+    color: #fff;
 }
 /* SITE MAIN STYLES  */
 .site-main{
     background-color: #fff;
-
 }
 /* HERO SECTION SYTYLES */
 .hero-section{
     background-color: #0eb4c1;
     padding: 120px 0;
-    
 }
 .hero-section-container{
     display: flex;
     justify-content: space-between;
-
 }
 .hero-section-text-wrepper{
     width: 100%;
     max-width: 500px;
-
 }
 .hero-section-title{
     font-family: "Open Sans Condensed","Arial",sans-serif;
@@ -150,9 +127,6 @@ padding: 24px 0;
     line-height: 43.2px;
     color: #fff;
     margin-bottom: 16px;
-
-
-
 }
 .hero-section-text{
     width: 440px;
@@ -160,7 +134,6 @@ padding: 24px 0;
     line-height: 27px;
     color: #fff;
     margin-bottom: 36px;
-
 }
 .hero-section-btn:hover{
     background-color:rgba(222, 46, 84, 0.8);
@@ -173,7 +146,6 @@ padding: 24px 0;
     height: 504px;
     margin-top: -91px;
     margin-bottom: -120px;
-
 }
 /* SERVICES SECTTION STYLES */
 .services-section{
@@ -181,8 +153,6 @@ padding: 24px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
-
 }
 .services-section-title{
     font-family: "Open Sans Condensed","Arial",sans-serif;
@@ -191,22 +161,18 @@ padding: 24px 0;
     line-height: 43.2px;
     color: #000;
     margin-bottom: 56px;
-
 }
 .services-section-list{
     width: 100%;
     max-width: 864px;
     margin-bottom: 60px;
-
 }
 .services-section-item{
     display: flex;
     align-items: center;
-
 }
 .services-section-item:not(:last-child){
     margin-bottom: 80px;
-    
 }
 .services-section-item-img{
     widows: 200px;
@@ -214,9 +180,6 @@ padding: 24px 0;
     border-radius: 24px;
     margin-right: 64px;
     box-shadow: 0px 12px 24px -8px rgba(0, 107, 116 0.3) ;
-
-
-
 }
 .services-section-item-title{
     font-family: "Open Sans Condensed","Arial",sans-serif;
@@ -225,30 +188,24 @@ padding: 24px 0;
     line-height: 28.8px;
     color: #222;
     margin-bottom: 24px;
-
-
 }
 .services-section-btn{
     border: solid 2px #de2e54;
-
 }
 .services-section-btn:hover{
     background-color: #fff;
     color: #de2e54;
-    
 }
 .services-section-btn:active{
     background-color: #de2e54;
     color: #fff;
     opacity: 0.6;
-
 }
 /* REGISTER SECTION STYLES */
 .register-section{
     background-color: #0eb4c1;
     padding: 64px 0;
     text-align: center;
-
 }
 .register-section-title{
     font-family: "Open Sans Condensed","Arial",sans-serif;
@@ -257,8 +214,6 @@ padding: 24px 0;
     line-height: 43.2px;
     color: #fff;
     margin-bottom: 40px;
-   
-    
 }
 .register-section-btn{
     font-family: "Open Sans Condensed","Arial",sans-serif;
@@ -272,12 +227,9 @@ padding: 24px 0;
     border: solid 2px #fff;
     padding: 12px 24px;
     border-radius: 8px;
-    
-
 }
 .register-section-btn:last-child{
     margin-left: 40px;
-
 }
 .register-section-btn:hover{
     border-color: #de2e54;
@@ -286,20 +238,16 @@ padding: 24px 0;
 }  
 .register-section-btn:active{
     opacity: 0.6;
-    
-
 }
 /* SITE FOOTER STYLES */
 .site-footer{
     background-color: #222;
     padding: 24px 0;
-
 }
 .site-footer-container{
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
 .site-footer-logo{
     color: #fff;
@@ -310,10 +258,8 @@ padding: 24px 0;
 }
 .site-footer-link{
     color: #fff;
-
 }
 .site-footer-link:active{
     opacity: 0.6;
     color: #fff;
-
 }
